--- a/autogen/templates/parent_template.xml
+++ b/autogen/templates/parent_template.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>net.imagej</groupId>
 		<artifactId>pom-imagej</artifactId>
-		<version>5.6.0</version>
+		<version>5.7.0</version>
 	</parent>
 
 	<groupId>org.knime.knip</groupId>
@@ -19,29 +19,15 @@
 
 	<properties>
 		<scijava.enforce.skip />
-
 		<felix-plugin.version>2.4.0</felix-plugin.version>
-
-		<commons-lang3.version>3.1</commons-lang3.version>
-		<commons-math3.version>3.2</commons-math3.version>
-		<mahout-collections.version>1.0</mahout-collections.version>
-
-		<scijava-jep.version>2.4.2</scijava-jep.version>
+		<jep.version>2.4.2</jep.version>
 
 		<!-- Deprecated package definitions. We shouldn't base on snapshots and 
 			knip-ops should be gone soon -->
 		<knip-imglib2-ops.version>0.1.4</knip-imglib2-ops.version>
 		<imglib2-roi.version>0.2.1-SNAPSHOT</imglib2-roi.version>
-
-		<!-- TODO OSGi doesn't support non-numerical version numbers. Therefore 
-			we have to manually set bundle version (osgi compatible version). When auto-generating 
-			the stuff, we can take care about these issues automatically -->
-		<imglib2-roi-osgi.version>0.2.1</imglib2-roi-osgi.version>
-		<imglib2-ij-osgi.version>2.0.0</imglib2-ij-osgi.version>
-		<imglib2-ui-osgi.version>2.0.0</imglib2-ui-osgi.version>
-		<imglib2-realtransform-osgi.version>2.0.0</imglib2-realtransform-osgi.version>
-		<imagej1-osgi.version>1.49</imagej1-osgi.version>
-		<knip-trackmate.version>2.7.1</knip-trackmate.version>
+		<knip-trackmate-fork.version>2.7.1</knip-trackmate-fork.version>
+		<trove4j.version>3.0.3</trove4j.version>
 	</properties>
 
 	<prerequisites>
@@ -50,9 +36,9 @@
 	</prerequisites>
 
 
-%(MODULES)
-	
-%(REPOSITORIES)
+	%(MODULES)
+
+	%(REPOSITORIES)
 
 	<build>
 		<plugins>
@@ -91,7 +77,7 @@
 					<artifactId>maven-bundle-plugin</artifactId>
 					<version>${felix-plugin.version}</version>
 					<configuration>
-						<!--  TODO  <excludeDependencies>${no-embed.dependencies}</excludeDependencies> -->
+						<!-- TODO <excludeDependencies>${no-embed.dependencies}</excludeDependencies> -->
 						<supportedProjectTypes>
 							<supportedProjectType>bundle</supportedProjectType>
 						</supportedProjectTypes>
@@ -101,7 +87,7 @@
 							<Private-Package></Private-Package>
 							<Embed-Transitive>true</Embed-Transitive>
 							<Embed-Dependency>*;scope=compile|runtime;inline=false</Embed-Dependency>
-							<!--  TODO  <Export-Package>${export.packages}</Export-Package> -->
+							<!-- TODO <Export-Package>${export.packages}</Export-Package> -->
 							<_exportcontents>${export.contents};-split-package:=merge-last</_exportcontents>
 							<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 							<Bundle-RequiredExecutionEnvironment>JavaSE-1.6</Bundle-RequiredExecutionEnvironment>
