update artifactid of knip-imglib2-ops to knip-tmp-imglib2-ops

--- a/autogen/templates/parent_template.xml
+++ b/autogen/templates/parent_template.xml
@@ -24,7 +24,7 @@
 
 		<!-- Deprecated package definitions. We shouldn't base on snapshots and 
 			knip-ops should be gone soon -->
-		<knip-imglib2-ops.version>0.1.4</knip-imglib2-ops.version>
+		<knip-tmp-imglib2-ops.version>0.1.4</knip-tmp-imglib2-ops.version>
 		<imglib2-roi.version>0.2.1-SNAPSHOT</imglib2-roi.version>
 		<knip-trackmate-fork.version>2.7.1</knip-trackmate-fork.version>
 		<trove4j.version>3.0.3</trove4j.version>
