--- a/autogen/templates/updatesite_template.xml
+++ b/autogen/templates/updatesite_template.xml
@@ -21,9 +21,9 @@
 
 	<repositories>
 		<repository>
-			<id>knime211</id>
+			<id>knime30</id>
 			<layout>p2</layout>
-			<url>http://www.knime.org/update/2.11/</url>
+			<url>https://jenkins.knime.org/download/3.0/Desktop/org.knime.update</url>
 		</repository>
 	</repositories>
 
