--- a/autogen/templates/bundle_template.xml
+++ b/autogen/templates/bundle_template.xml
@@ -37,4 +37,19 @@
 		</plugins>
 	</build>
 
+	<repositories>
+		<repository>
+			<id>imagej.public</id>
+			<url>http://maven.imagej.net/content/groups/public</url>
+		</repository>
+		<repository>
+			<id>clearcontrol</id>
+			<url>http://dl.bintray.com/clearcontrol/ClearControl</url>
+		</repository>
+		<repository>
+			<id>nativelibs</id>
+			<url>http://nativelibs4java.sourceforge.net/maven</url>
+		</repository>
+	</repositories>
+
 </project>
