--- a/autogen/templates/updatesite_template.xml
+++ b/autogen/templates/updatesite_template.xml
@@ -23,7 +23,7 @@
 		<repository>
 			<id>knimeTrunk</id>
 			<layout>p2</layout>
-            <url>https://jenkins.knime.org/download/trunk/</url>
+            <url>https://update.knime.org/analytics-platform/nightly/</url>
 		</repository>
 	</repositories>
 
